--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,9 +3,8 @@ version: 0.2
 phases:
   build:
     commands:
-      - chmod +x ./gradlew
       - ./gradlew assembleDebug
 artifacts:
   files:
-     - './android/app/build/outputs/**/*.apk'
+     - '/test.apk'
   discard-paths: yes
